<resources>
    <string name="app_name">FayaApp</string>
    <string name="firstname">Prénom</string>
    <string name="name">Nom</string>
    <string name="checkbox">J\'accepte de devenir un Wilder. J\'ai même déjà brûlé mes chaussures</string>
    <string name="welcomeMsg">Bienvenue à la Wild Code School</string>
    <string name="button">Valider</string>
    <string name="congrats">Félicitation ! Tu es désormais un Wilder !</string>
    <string name="error">Tu dois entrer ton nom ET ton prénom</string>





</resources>
